syntax="proto3";
package pb;
import "userModels.proto";
option go_package = "/internal/service;service";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
//import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message UserRequest{
  string NickName=1;
  string UserName=2;
  string Password=3;
  string PasswordConfirm=4;
}

message UserDetailResponse{
  UserModel UserDetail = 1;
  string Token = 2;
  uint32 Code = 3;
}


service UserService{
  rpc UserLogin(UserRequest) returns(UserDetailResponse) {
    option (google.api.http) = {
      post:"/api/v1/user/login",
      body:"*",
    };
  };
  rpc UserRegister(UserRequest) returns(UserDetailResponse) {
    option (google.api.http) = {
      post:"/api/v1/user/register",
      body:"*",
    };
  };
  rpc UserLogout(google.protobuf.Empty) returns(UserDetailResponse) {
    option (google.api.http) = {
      post:"/api/v1/user/logout",
      body:"*",
    };
  };
  rpc AuthCheck(google.protobuf.Empty) returns(UserDetailResponse) {
    option (google.api.http) = {
      post:"/api/v1/user/auth-check",
      body:"*",
    };
  };
  rpc UserInfo(UserModel) returns(UserDetailResponse) {
    option (google.api.http) = {
      get:"/api/v1/user/info",
    };
  };
}
